# python_bindings

./: .gitignore  CMakeLists.txt  README.md  cython_example_test.py  main.cpp  pybind11_test.py  requirements.txt  setup.py  setup.sh
examples/: CMakeLists.txt
examples/cython_example/: CMakeLists.txt
examples/cython_example/include/cython_example/: player.h  simple_functions.h
examples/cython_example/src/: player.cpp  simple_functions.cpp
examples/pybind11_example/: CMakeLists.txt
examples/pybind11_example/include/pybind11_example/: player.h  simple_functions.h
examples/pybind11_example/include/pybind11_example/observer/: IPublisher.h  ISubscriber.h  publisher.h  subscriber.h
examples/pybind11_example/src/: player.cpp  simple_functions.cpp
examples/pybind11_example/src/observer/: publisher.cpp  subscriber.cpp
lib/: CMakeLists.txt
python/: CMakeLists.txt
python/cython_example/: CMakeLists.txt  player.pyx  simple_functions.pyx
python/pybind11_example/: CMakeLists.txt  observer.cpp  player.cpp  simple_functions.cpp
python/test_examples/: cython_example_test.py  observer.py  pybind11_example_test.py
scripts/: setup.sh
tests/: test_simple_functions.py
